'add work-link:hover/css'

--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@
         </pre>
 
         <p>
-          More examples at the
+          More examples at the repository
+
           <a
             class="code-link"
             href=" https://github.com/IgorLutoshkin/CODEWARS-JS.git"
@@ -156,9 +157,9 @@
           <span class="line"></span>
         </div>
         <p>
-          The whole experience is linked to Github:
-          <a href="https://github.com/IgorLutoshkin"
-            >https://github.com/IgorLutoshkin</a
+          The whole experience is linked to 
+          <a class="work-link" href="https://github.com/IgorLutoshkin"
+            >GitHub</a
           >
         </p>
       </section>
