--- a/index.html
+++ b/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>CV IgorLutoshkin</title>
-</head>
-<body>
-	
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>CV IgorLutoshkin</title>
+  </head>
+  <body>
+    <header>
+      <h1>IgorLutoshkin</h1>
+      <span>html coder</span>
+    </header>
+
+    <section>
+      <h2>About me</h2>
+      <span>
+        Hi, here I will tell you a little about myself. I want to be a
+        professional developer, constantly develop and learn new technologies.
+        Now the task is to study the frontend, but in the future I plan to study
+        the backend as well. My strengths are that I am fascinated by the
+        development process itself. That is, a kind of "masachism" in
+        programming, when everything fails and I can't solve the problem, and I
+        don't even know how to do it. This motivates me to look for and come up
+        with algorithms and ways to solve the problem. And of course that
+        feeling of euphoria when I was able to solve the problem). I don't have
+        much experience, except that I can add a Python certificate, I'm also
+        currently studying HTML and CSS on my own, I have basic skills working
+        with the Git version control system. Currently, my experience is daily
+        work in self-study of technology and, of course, your course.
+        Unfortunately, there is not much time left for studying now, but I try
+        to devote every free minute to programming.
+      </span>
+    </section>
+  </body>
 </html>
