'feat: add section experience'

--- a/index.html
+++ b/index.html
@@ -32,5 +32,17 @@
         to devote every free minute to programming.
       </span>
     </section>
+
+    <section>
+      <h2>Work experience</h2>
+      <span
+        >The whole experience is linked to Github:
+        <a href="https://github.com/IgorLutoshkin"
+          >https://github.com/IgorLutoshkin</a
+        >
+      </span>
+    </section>
+
+
   </body>
 </html>
