'feat: add section education'

--- a/index.html
+++ b/index.html
@@ -43,6 +43,22 @@
       </span>
     </section>
 
+    <section>
+      <h2>Education</h2>
+      <ul>
+        <li>
+          Vyatka State University, 5th year, Faculty of Engineering and Design
+          Technologies
+        </li>
+        <li>
+          Certificate:
+          <a href="https://stepik.org/cert/1569801"
+            >https://stepik.org/cert/1569801</a
+          >
+        </li>
+      </ul>
+    </section>
+
 
   </body>
 </html>
