'feat: add section my skills'

--- a/index.html
+++ b/index.html
@@ -59,6 +59,15 @@
       </ul>
     </section>
 
-
+    <section>
+      <h2>My skills</h2>
+      <ul>
+        <li>Python</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Git</li>
+        <li>JS (a little)</li>
+      </ul>
+    </section>
   </body>
 </html>
