'feat: add section code examples'

--- a/index.html
+++ b/index.html
@@ -69,5 +69,22 @@
         <li>JS (a little)</li>
       </ul>
     </section>
+
+    <section>
+      <h2>Code examples 'Codewars'</h2>
+      <span>
+        /*Given a random non-negative number, you have to return the digits of
+        this number within an array in reverse order.*/ function digitize(n) {
+        let a = (Array.from(String(n), Number)).reverse(); return a; }
+      </span>
+      <span>
+        More examples at the link:
+        <a href=" https://github.com/IgorLutoshkin/CODEWARS-JS.git">
+          https://github.com/IgorLutoshkin/CODEWARS-JS.git</a
+        >
+      </span>
+    </section>
+
+
   </body>
 </html>
