'feat: add section contacts'

--- a/index.html
+++ b/index.html
@@ -85,6 +85,14 @@
       </span>
     </section>
 
-
+    <section>
+      <h2>Contacts for communication</h2>
+      <ul>
+        <li>E-mail: ig.yarij@mail.ru</li>
+        <li>GitHub: https://github.com/IgorLutoshkin</li>
+        <li>VK: https://vk.com/id651344516</li>
+        <li>Stepik: https://stepik.org/users/380788903</li>
+      </ul>
+    </section>
   </body>
 </html>
