'feat: add figure for header'

--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     <title>CV IgorLutoshkin</title>
   </head>
   <body>
+
     <header>
       <h1>IgorLutoshkin</h1>
       <span>html coder</span>
+      <figure>
+        <img src="" alt="my avatar">
+      </figure>
     </header>
 
     <section>
