'feat: add img my avatar'

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h1>IgorLutoshkin</h1>
       <span>html coder</span>
       <figure>
-        <img src="" alt="my avatar">
+        <img src="./img/my avatar.jpg" alt="my avatar">
       </figure>
     </header>
 
