--- a/index.html
+++ b/index.html
@@ -4,99 +4,105 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>CV IgorLutoshkin</title>
   </head>
-  <body>
 
-    <header>
-      <h1>IgorLutoshkin</h1>
-      <span>html coder</span>
+  <body>
+    <header class="head">
+      <div>
+        <h1>IgorLutoshkin</h1>
+        <span>html coder</span>
+      </div>
+
       <figure>
-        <img src="./img/my avatar.jpg" alt="my avatar">
+        <img src="./img/my avatar.jpg" alt="my avatar" />
       </figure>
     </header>
 
-    <section>
-      <h2>About me</h2>
-      <span>
-        Hi, here I will tell you a little about myself. I want to be a
-        professional developer, constantly develop and learn new technologies.
-        Now the task is to study the frontend, but in the future I plan to study
-        the backend as well. My strengths are that I am fascinated by the
-        development process itself. That is, a kind of "masachism" in
-        programming, when everything fails and I can't solve the problem, and I
-        don't even know how to do it. This motivates me to look for and come up
-        with algorithms and ways to solve the problem. And of course that
-        feeling of euphoria when I was able to solve the problem). I don't have
-        much experience, except that I can add a Python certificate, I'm also
-        currently studying HTML and CSS on my own, I have basic skills working
-        with the Git version control system. Currently, my experience is daily
-        work in self-study of technology and, of course, your course.
-        Unfortunately, there is not much time left for studying now, but I try
-        to devote every free minute to programming.
-      </span>
-    </section>
+    <div class="content">
+      <section>
+        <h2>About me</h2>
+        <span>
+          Hi, here I will tell you a little about myself. I want to be a
+          professional developer, constantly develop and learn new technologies.
+          Now the task is to study the frontend, but in the future I plan to
+          study the backend as well. My strengths are that I am fascinated by
+          the development process itself. That is, a kind of "masachism" in
+          programming, when everything fails and I can't solve the problem, and
+          I don't even know how to do it. This motivates me to look for and come
+          up with algorithms and ways to solve the problem. And of course that
+          feeling of euphoria when I was able to solve the problem). I don't
+          have much experience, except that I can add a Python certificate, I'm
+          also currently studying HTML and CSS on my own, I have basic skills
+          working with the Git version control system. Currently, my experience
+          is daily work in self-study of technology and, of course, your course.
+          Unfortunately, there is not much time left for studying now, but I try
+          to devote every free minute to programming.
+        </span>
+      </section>
 
-    <section>
-      <h2>Work experience</h2>
-      <span
-        >The whole experience is linked to Github:
-        <a href="https://github.com/IgorLutoshkin"
-          >https://github.com/IgorLutoshkin</a
-        >
-      </span>
-    </section>
-
-    <section>
-      <h2>Education</h2>
-      <ul>
-        <li>
-          Vyatka State University, 5th year, Faculty of Engineering and Design
-          Technologies
-        </li>
-        <li>
-          Certificate:
-          <a href="https://stepik.org/cert/1569801"
-            >https://stepik.org/cert/1569801</a
+      <section>
+        <h2>Work experience</h2>
+        <span
+          >The whole experience is linked to Github:
+          <a href="https://github.com/IgorLutoshkin"
+            >https://github.com/IgorLutoshkin</a
           >
-        </li>
-      </ul>
-    </section>
+        </span>
+      </section>
 
-    <section>
-      <h2>My skills</h2>
-      <ul>
-        <li>Python</li>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>Git</li>
-        <li>JS (a little)</li>
-      </ul>
-    </section>
+      <section>
+        <h2>Education</h2>
+        <ul>
+          <li>
+            Vyatka State University, 5th year, Faculty of Engineering and Design
+            Technologies
+          </li>
+          <li>
+            Certificate:
+            <a href="https://stepik.org/cert/1569801"
+              >https://stepik.org/cert/1569801</a
+            >
+          </li>
+        </ul>
+      </section>
 
-    <section>
-      <h2>Code examples 'Codewars'</h2>
-      <span>
-        /*Given a random non-negative number, you have to return the digits of
-        this number within an array in reverse order.*/ function digitize(n) {
-        let a = (Array.from(String(n), Number)).reverse(); return a; }
-      </span>
-      <span>
-        More examples at the link:
-        <a href=" https://github.com/IgorLutoshkin/CODEWARS-JS.git">
-          https://github.com/IgorLutoshkin/CODEWARS-JS.git</a
-        >
-      </span>
-    </section>
+      <section>
+        <h2>My skills</h2>
+        <ul>
+          <li>Python</li>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>Git</li>
+          <li>JS (a little)</li>
+        </ul>
+      </section>
 
-    <section>
-      <h2>Contacts for communication</h2>
-      <ul>
-        <li>E-mail: ig.yarij@mail.ru</li>
-        <li>GitHub: https://github.com/IgorLutoshkin</li>
-        <li>VK: https://vk.com/id651344516</li>
-        <li>Stepik: https://stepik.org/users/380788903</li>
-      </ul>
-    </section>
+      <section>
+        <h2>Code examples 'Codewars'</h2>
+        <span>
+          /*Given a random non-negative number, you have to return the digits of
+          this number within an array in reverse order.*/ function digitize(n) {
+          let a = (Array.from(String(n), Number)).reverse(); return a; }
+        </span>
+        <span>
+          More examples at the link:
+          <a href=" https://github.com/IgorLutoshkin/CODEWARS-JS.git">
+            https://github.com/IgorLutoshkin/CODEWARS-JS.git</a
+          >
+        </span>
+      </section>
+
+      <section>
+        <h2>Contacts for communication</h2>
+        <ul>
+          <li>E-mail: ig.yarij@mail.ru</li>
+          <li>GitHub: https://github.com/IgorLutoshkin</li>
+          <li>VK: https://vk.com/id651344516</li>
+          <li>Stepik: https://stepik.org/users/380788903</li>
+        </ul>
+      </section>
+    </div>
   </body>
 </html>
