'feat: add section education/css'

--- a/index.html
+++ b/index.html
@@ -27,18 +27,18 @@
     </header>
 
     <div class="content">
-      <section>
-        <h2>Education</h2>
-        <ul>
-          <li>
+      <section class="education">
+        <h2 class="education-title">Education</h2>
+        <ul class="education-list">
+          <li class="education-list-item">
             Vyatka State University, 5th year, Faculty of Engineering and Design
             Technologies
           </li>
-          <li>
-            Certificate:
-            <a href="https://stepik.org/cert/1569801"
-              >https://stepik.org/cert/1569801</a
-            >
+          <li class="education-list-item">
+            <li class="">
+            Far Eastern Federal University program 'Python in examples and tasks' (watch <a href="https://stepik.org/cert/1569801"
+              >certificate </a
+            >)
           </li>
         </ul>
       </section>
