'feat: add .title-list-item/css'

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
         <h2 class="education-title">Education</h2>
         <ul class="education-list">
           <li class="education-list-item">
-            Vyatka State University, 5th year, Faculty of Engineering and Design
-            Technologies
+            <span class="title-list-item">Vyatka State University</span> , 5th year, Faculty of
+            Engineering and Design Technologies
           </li>
-          <li class="education-list-item">
-            <li class="">
-            Far Eastern Federal University program 'Python in examples and tasks' (watch <a href="https://stepik.org/cert/1569801"
-              >certificate </a
-            >)
+          <li class="education-list-item"></li>
+          <li class="">
+            <span class="title-list-item">Far Eastern Federal University</span> program 'Python in
+            examples and tasks' (watch
+            <a href="https://stepik.org/cert/1569801">certificate </a>)
           </li>
         </ul>
       </section>
