'feat: add end education/css'

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="head">
       <div class="head-wrap">
         <h1 class="head-title">Igor Lutoshkin</h1>
-        <span class="head-desc">HTML coder</span>
+        <p class="head-desc">HTML coder</p>
       </div>
 
       <figure class="head-pic">
@@ -31,11 +31,11 @@
         <h2 class="education-title">Education</h2>
         <ul class="education-list">
           <li class="education-list-item">
-            <span class="title-list-item">Vyatka State University</span>
+            <p class="title-list-item">Vyatka State University</з>
             <p class="list-item-desc">5th year, Faculty of Engineering and Design Technologies</p>
           </li>
           <li class="education-list-item">
-            <span class="title-list-item">Far Eastern Federal University</span>
+            <p class="title-list-item">Far Eastern Federal University</p>
             <p class="list-item-desc">Python in examples and tasks (watch
             <a href="https://stepik.org/cert/1569801">certificate </a>)</p> 
           </li>
@@ -44,7 +44,7 @@
 
       <section class="about">
         <h2>About me</h2>
-        <span>
+        <p>
           Hi, here I will tell you a little about myself. I want to be a
           professional developer, constantly develop and learn new technologies.
           Now the task is to study the frontend, but in the future I plan to
@@ -60,7 +60,7 @@
           is daily work in self-study of technology and, of course, your course.
           Unfortunately, there is not much time left for studying now, but I try
           to devote every free minute to programming.
-        </span>
+        </p>
       </section>
 
       <section>
@@ -75,21 +75,21 @@
 
       <section>
         <h2>Work experience</h2>
-        <span
+        <p
           >The whole experience is linked to Github:
           <a href="https://github.com/IgorLutoshkin"
             >https://github.com/IgorLutoshkin</a
           >
-        </span>
+        </p>
       </section>
 
       <section>
         <h2>Code examples 'Codewars'</h2>
 
-        <span
+        <p
           >Given a random non-negative number, you have to return the digits of
           this number within an array in reverse order.
-        </span>
+        </p>
 
         <pre>
             <code>function digitize(n) {
@@ -98,12 +98,12 @@
         }</code>
             </pre>
 
-        <span>
+        <p>
           More examples at the link:
           <a href=" https://github.com/IgorLutoshkin/CODEWARS-JS.git">
             https://github.com/IgorLutoshkin/CODEWARS-JS.git</a
           >
-        </span>
+        </p>
       </section>
 
       <section>
