'feat: add section-about me/css'

--- a/index.html
+++ b/index.html
@@ -31,20 +31,24 @@
         <h2 class="education-title">Education</h2>
         <ul class="education-list">
           <li class="education-list-item">
-            <p class="title-list-item">Vyatka State University</з>
-            <p class="list-item-desc">5th year, Faculty of Engineering and Design Technologies</p>
+            <p class="title-list-item">Vyatka State University</p>
+            <p class="list-item-desc">
+              5th year, Faculty of Engineering and Design Technologies
+            </p>
           </li>
           <li class="education-list-item">
             <p class="title-list-item">Far Eastern Federal University</p>
-            <p class="list-item-desc">Python in examples and tasks (watch
-            <a href="https://stepik.org/cert/1569801">certificate </a>)</p> 
+            <p class="list-item-desc">
+              Python in examples and tasks (watch
+              <a href="https://stepik.org/cert/1569801">certificate </a>)
+            </p>
           </li>
         </ul>
       </section>
 
       <section class="about">
         <h2>About me</h2>
-        <p>
+        <p class="about-desc">
           Hi, here I will tell you a little about myself. I want to be a
           professional developer, constantly develop and learn new technologies.
           Now the task is to study the frontend, but in the future I plan to
@@ -75,8 +79,8 @@
 
       <section>
         <h2>Work experience</h2>
-        <p
-          >The whole experience is linked to Github:
+        <p>
+          The whole experience is linked to Github:
           <a href="https://github.com/IgorLutoshkin"
             >https://github.com/IgorLutoshkin</a
           >
@@ -86,8 +90,8 @@
       <section>
         <h2>Code examples 'Codewars'</h2>
 
-        <p
-          >Given a random non-negative number, you have to return the digits of
+        <p>
+          Given a random non-negative number, you have to return the digits of
           this number within an array in reverse order.
         </p>
 
