'feat: add p for css'

--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
       <section>
         <h2>Contacts for communication</h2>
         <ul>
-          <li>E-mail: ig.yarij@mail.ru</li>
-          <li>GitHub: https://github.com/IgorLutoshkin</li>
-          <li>VK: https://vk.com/id651344516</li>
-          <li>Stepik: https://stepik.org/users/380788903</li>
+          <li><p>E-mail: ig.yarij@mail.ru</p></li>
+          <li><p>GitHub: https://github.com/IgorLutoshkin</p></li>
+          <li><p>VK: https://vk.com/id651344516</p></li>
+          <li><p>Stepik: https://stepik.org/users/380788903</p></li>
         </ul>
       </section>
 
@@ -113,11 +113,11 @@
       <section>
         <h2>My skills</h2>
         <ul>
-          <li>Python</li>
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>Git</li>
-          <li>JS (a little)</li>
+          <li><p>Python</p></li>
+          <li><p>HTML</p></li>
+          <li><p>CSS</p></li>
+          <li><p>Git</p></li>
+          <li><p>JS (a little)</p></li>
         </ul>
       </section>
     </div>
