'feat: width for grid/css'

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
 
       <figure class="head-pic">
-        <img src="./img/my avatar.jpg" alt="my avatar" />
+        <img src="./img/2023-02-19_19-43-59.png" alt="my avatar" />
       </figure>
     </header>
 
@@ -67,7 +67,7 @@
         </p>
       </section>
 
-      <section>
+      <section class="contacts">
         <h2>Contacts for communication</h2>
         <ul>
           <li><p>E-mail: ig.yarij@mail.ru</p></li>
@@ -77,7 +77,7 @@
         </ul>
       </section>
 
-      <section>
+      <section class="work">
         <h2>Work experience</h2>
         <p>
           The whole experience is linked to Github:
@@ -87,7 +87,7 @@
         </p>
       </section>
 
-      <section>
+      <section class="code">
         <h2>Code examples 'Codewars'</h2>
 
         <p>
