--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
 
       <section class="about">
         <h2>About me</h2>
+        <div class="line-wrap">
+          <span class="line"></span>
+        </div>
         <p class="about-desc">
           Hi, here I will tell you a little about myself. I want to be a
           professional developer, constantly develop and learn new technologies.
@@ -79,6 +82,9 @@
 
       <section>
         <h2>My skills</h2>
+        <div class="line-wrap">
+          <span class="line"></span>
+        </div>
         <ul>
           <li><p>Python</p></li>
           <li><p>HTML</p></li>
@@ -113,6 +119,9 @@
 
       <section class="work">
         <h2>Work experience</h2>
+        <div class="line-wrap">
+          <span class="line"></span>
+        </div>
         <p>
           The whole experience is linked to Github:
           <a href="https://github.com/IgorLutoshkin"
