--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
     <div class="content">
       <section class="education">
         <h2 class="education-title">Education</h2>
+        <div class="line-wrap">
+          <span class="line line-left"></span>
+        </div>
         <ul class="education-list">
           <li class="education-list-item">
             <p class="title-list-item">Vyatka State University</p>
@@ -72,6 +75,9 @@
 
       <section class="contacts">
         <h2>Contacts for communication</h2>
+        <div class="line-wrap">
+          <span class="line line-left"></span>
+        </div>
         <ul>
           <li><p>E-mail: ig.yarij@mail.ru</p></li>
           <li><p>GitHub: https://github.com/IgorLutoshkin</p></li>
@@ -96,7 +102,9 @@
 
       <section class="code">
         <h2>Code examples 'Codewars'</h2>
-
+        <div class="line-wrap">
+          <span class="line line-left"></span>
+        </div>
         <p>
           Given a random non-negative number, you have to return the digits of
           this number within an array in reverse order.
