'feat: add class-surname/css'

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
   <body>
     <header class="head">
       <div class="head-wrap">
-        <h1 class="head-title">Igor Lutoshkin</h1>
+        <h1 class="head-title">
+          Igor
+          <span class="surname">Lutoshkin</span>
+        </h1>
         <p class="head-desc">HTML coder</p>
       </div>
 
