--- a/index.html
+++ b/index.html
@@ -62,22 +62,17 @@
           professional developer, constantly develop and learn new technologies.
           Now the task is to study the frontend, but in the future I plan to
           study the backend as well. My strengths are that I am fascinated by
-          the development process itself. That is, a kind of "masachism" in
-          programming, when everything fails and I can't solve the problem, and
-          I don't even know how to do it. This motivates me to look for and come
-          up with algorithms and ways to solve the problem. And of course that
-          feeling of euphoria when I was able to solve the problem). I don't
-          have much experience, except that I can add a Python certificate, I'm
-          also currently studying HTML and CSS on my own, I have basic skills
-          working with the Git version control system. Currently, my experience
-          is daily work in self-study of technology and, of course, your course.
-          Unfortunately, there is not much time left for studying now, but I try
-          to devote every free minute to programming.
+          the development process itself. I don't have much experience, except
+          that I can add a Python certificate, I'm also currently studying HTML
+          and CSS on my own, I have basic skills working with the Git version
+          control system. Currently, my experience is daily work in self-study
+          of technology. Unfortunately, there is not much time left for studying
+          now, but I try to devote every free minute to programming.
         </p>
       </section>
 
       <section class="contacts">
-        <h2>Contacts for communication</h2>
+        <h2>Contacts</h2>
         <div class="line-wrap">
           <span class="line line-left"></span>
         </div>
@@ -104,7 +99,7 @@
       </section>
 
       <section class="code">
-        <h2>Code examples 'Codewars'</h2>
+        <h2>Code examples</h2>
         <div class="line-wrap">
           <span class="line line-left"></span>
         </div>
