'feat: add icon for contacts'

--- a/index.html
+++ b/index.html
@@ -21,11 +21,15 @@
           Igor
           <span class="surname">Lutoshkin</span>
         </h1>
-        <p class="head-desc">HTML coder</p>
+        <p class="head-desc">HTML CODER</p>
       </div>
 
       <figure class="head-pic">
-        <img src="./img/2023-02-19_19-43-59.png" alt="my avatar" />
+        <img
+          class="pic-avatar"
+          src="./img/2023-02-19_19-43-59.png"
+          alt="my avatar"
+        />
       </figure>
     </header>
 
@@ -76,11 +80,27 @@
         <div class="line-wrap">
           <span class="line line-left"></span>
         </div>
-        <ul>
-          <li><p>E-mail: ig.yarij@mail.ru</p></li>
-          <li><p>GitHub: https://github.com/IgorLutoshkin</p></li>
-          <li><p>VK: https://vk.com/id651344516</p></li>
-          <li><p>Stepik: https://stepik.org/users/380788903</p></li>
+        <ul class="contacts-list">
+          <li class="list-item">
+            <p>
+              <img src="./img/mail.svg" alt="" />
+              E-mail: <a href="https://e.mail.ru/inbox/">ig.yarij@mail.ru</a>
+            </p>
+          </li>
+          <li class="list-item">
+            <p>
+              <img src="./img/telegram.svg" alt="" /> <a href="">Telegram</a>
+            </p>
+          </li>
+          <li class="list-item">
+            <p>
+              <img src="./img/vk.svg" alt="" />
+              <a href="https://vk.com/id651344516">VK</a>
+            </p>
+          </li>
+          <li>
+            <p><img src="./img/phone.svg" alt="" /> +7 904 225 08 09</p>
+          </li>
         </ul>
       </section>
 
