--- a/index.html
+++ b/index.html
@@ -82,24 +82,24 @@
         </div>
         <ul class="contacts-list">
           <li class="list-item">
-            <p>
-              <img src="./img/mail.svg" alt="" />
+            <p class="item-desc">
+              <img class="cont-icon" src="./img/mail.svg" alt="" />
               E-mail: <a href="https://e.mail.ru/inbox/">ig.yarij@mail.ru</a>
             </p>
           </li>
           <li class="list-item">
-            <p>
-              <img src="./img/telegram.svg" alt="" /> <a href="">Telegram</a>
+            <p class="item-desc">
+              <img class="cont-icon" src="./img/telegram.svg" alt="" /> <a href="">Telegram</a>
             </p>
           </li>
           <li class="list-item">
-            <p>
-              <img src="./img/vk.svg" alt="" />
+            <p class="item-desc">
+              <img class="cont-icon" src="./img/vk.svg" alt="" />
               <a href="https://vk.com/id651344516">VK</a>
             </p>
           </li>
           <li>
-            <p><img src="./img/phone.svg" alt="" /> +7 904 225 08 09</p>
+            <p class="item-desc"><img class="cont-icon" src="./img/phone.svg" alt="" /> +7 904 225 08 09</p>
           </li>
         </ul>
       </section>
