'feat: add code-link:hover/css '

--- a/index.html
+++ b/index.html
@@ -84,12 +84,13 @@
           <li class="list-item">
             <p class="item-desc">
               <img class="cont-icon" src="./img/mail.svg" alt="" />
-              E-mail: <a href="https://e.mail.ru/inbox/">ig.yarij@mail.ru</a>
+              <a href="https://e.mail.ru/inbox/">ig.yarij@mail.ru</a>
             </p>
           </li>
           <li class="list-item">
             <p class="item-desc">
-              <img class="cont-icon" src="./img/telegram.svg" alt="" /> <a href="">Telegram</a>
+              <img class="cont-icon" src="./img/telegram.svg" alt="" />
+              <a href="">Telegram</a>
             </p>
           </li>
           <li class="list-item">
@@ -99,47 +100,53 @@
             </p>
           </li>
           <li>
-            <p class="item-desc"><img class="cont-icon" src="./img/phone.svg" alt="" /> +7 904 225 08 09</p>
+            <p class="item-desc">
+              <img class="cont-icon" src="./img/phone.svg" alt="" /> +7 904 225
+              08 09
+            </p>
           </li>
         </ul>
       </section>
 
-      <section>
-        <h2>My skills</h2>
+      <section class="skills">
+        <h2 class="skills-title">My skills</h2>
         <div class="line-wrap">
           <span class="line"></span>
         </div>
-        <ul>
-          <li><p>Python</p></li>
-          <li><p>HTML</p></li>
-          <li><p>CSS</p></li>
-          <li><p>Git</p></li>
-          <li><p>JS (a little)</p></li>
+        <ul class="skills-list">
+          <li class=""><p class="">Python</p></li>
+          <li class=""><p class="">HTML</p></li>
+          <li class=""><p class="">CSS</p></li>
+          <li class=""><p class="">Git</p></li>
+          <li class=""><p class="">JS (a little)</p></li>
         </ul>
       </section>
 
       <section class="code">
-        <h2>Code examples</h2>
+        <h2 class="code-tile">Code examples</h2>
         <div class="line-wrap">
           <span class="line line-left"></span>
         </div>
         <p>
           Given a random non-negative number, you have to return the digits of
-          this number within an array in reverse order.
+          this number within an array in reverse order
         </p>
 
         <pre>
             <code>function digitize(n) {
             let a = (Array.from(String(n), Number)).reverse(); 
             return a; 
-        }</code>
-            </pre>
+            }
+            </code>
+        </pre>
 
         <p>
-          More examples at the link:
-          <a href=" https://github.com/IgorLutoshkin/CODEWARS-JS.git">
-            https://github.com/IgorLutoshkin/CODEWARS-JS.git</a
-          >
+          More examples at the
+          <a
+            class="code-link"
+            href=" https://github.com/IgorLutoshkin/CODEWARS-JS.git"
+            >GitHub
+          </a>
         </p>
       </section>
 
