--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <figure class="head-pic">
         <img
           class="pic-avatar"
-          src="./img/2023-02-19_19-43-59.png"
+          src="./img/my avatar.jpg"
           alt="my avatar"
         />
       </figure>
