'add icon for skills'

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <li class="education-list-item">
             <p class="title-list-item">Far Eastern Federal University</p>
             <p class="list-item-desc">
-              Python in examples and tasks (watch
+              Python in examples and tasks (my
               <a href="https://stepik.org/cert/1569801">certificate </a>)
             </p>
           </li>
@@ -114,11 +114,11 @@
           <span class="line"></span>
         </div>
         <ul class="skills-list">
-          <li class=""><p class="">Python</p></li>
-          <li class=""><p class="">HTML</p></li>
-          <li class=""><p class="">CSS</p></li>
-          <li class=""><p class="">Git</p></li>
-          <li class=""><p class="">JS (a little)</p></li>
+          <li class=""><p class=""> <img src="./img/python.ico" alt=""> Python</p></li>
+          <li class=""><p class=""> <img src="./img/html5.ico" alt=""> HTML</p></li>
+          <li class=""><p class=""> <img src="./img/css3.ico" alt=""> CSS</p></li>
+          <li class=""><p class=""> <img src="./img/github.ico" alt=""> Git</p></li>
+          <li class=""><p class=""> <img src="./img/java_script.ico" alt=""> JS (a little)</p></li>
         </ul>
       </section>
 
