'add skills-icon'

--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
           <span class="line"></span>
         </div>
         <ul class="skills-list">
-          <li class=""><p class=""> <img src="./img/python.ico" alt=""> Python</p></li>
-          <li class=""><p class=""> <img src="./img/html5.ico" alt=""> HTML</p></li>
-          <li class=""><p class=""> <img src="./img/css3.ico" alt=""> CSS</p></li>
-          <li class=""><p class=""> <img src="./img/github.ico" alt=""> Git</p></li>
-          <li class=""><p class=""> <img src="./img/java_script.ico" alt=""> JS (a little)</p></li>
+          <li class=""><p class="item-desc"> <img class="skills-icon" src="./img/python.ico" alt=""> Python</p></li>
+          <li class=""><p class="item-desc"> <img class="skills-icon" src="./img/html5.ico" alt=""> HTML</p></li>
+          <li class=""><p class="item-desc"> <img class="skills-icon" src="./img/css3.ico" alt=""> CSS</p></li>
+          <li class=""><p class="item-desc"> <img class="skills-icon" src="./img/github.ico" alt=""> Git</p></li>
+          <li class=""><p class="item-desc"> <img class="skills-icon" src="./img/java_script.ico" alt=""> JS (a little)</p></li>
         </ul>
       </section>
 
