--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,300&display=swap"
       rel="stylesheet"
     />
-    <title>CV IgorLutoshkin</title>
+    <link rel="apple-touch-icon." sizes="180x180" href="./img/favicon_io/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="./img/favicon_io/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="./img/favicon_io/favicon-16x16.png">
+<link rel="manifest" href="./img/favicon_io/favicon.ico">
+    <title>Igor Lutoshkin</title>
   </head>
 
   <body>
