feat: add ava9 and del filter b&w'

--- a/index.html
+++ b/index.html
@@ -11,10 +11,24 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,300&display=swap"
       rel="stylesheet"
     />
-    <link rel="apple-touch-icon." sizes="180x180" href="./img/favicon_io/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="./img/favicon_io/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="./img/favicon_io/favicon-16x16.png">
-<link rel="manifest" href="./img/favicon_io/favicon.ico">
+    <link
+      rel="apple-touch-icon."
+      sizes="180x180"
+      href="./img/favicon_io/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./img/favicon_io/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./img/favicon_io/favicon-16x16.png"
+    />
+    <link rel="manifest" href="./img/favicon_io/favicon.ico" />
     <title>Igor Lutoshkin</title>
   </head>
 
@@ -29,11 +43,7 @@
       </div>
 
       <figure class="head-pic">
-        <img
-          class="pic-avatar"
-          src="./img/my avatar.jpg"
-          alt="my avatar"
-        />
+        <img class="pic-avatar" src="./img/ava9.jpg" alt="my avatar" />
       </figure>
     </header>
 
@@ -53,8 +63,10 @@
           <li class="education-list-item">
             <p class="title-list-item">Far Eastern Federal University</p>
             <p class="list-item-desc">
-              Python in examples and tasks (my
-              <a href="https://stepik.org/cert/1569801">certificate </a>)
+              Python in examples and tasks (
+              <a class="item-desk__link" href="https://stepik.org/cert/1569801"
+                >certificate </a
+              >)
             </p>
           </li>
         </ul>
@@ -118,11 +130,32 @@
           <span class="line"></span>
         </div>
         <ul class="skills-list">
-          <li class=""><p class="item-desc"> <img class="skills-icon" src="./img/python.ico" alt=""> Python</p></li>
-          <li class=""><p class="item-desc"> <img class="skills-icon" src="./img/html5.ico" alt=""> HTML</p></li>
-          <li class=""><p class="item-desc"> <img class="skills-icon" src="./img/css3.ico" alt=""> CSS</p></li>
-          <li class=""><p class="item-desc"> <img class="skills-icon" src="./img/github.ico" alt=""> Git</p></li>
-          <li class=""><p class="item-desc"> <img class="skills-icon" src="./img/java_script.ico" alt=""> JS (a little)</p></li>
+          <li class="">
+            <p class="item-desc">
+              <img class="skills-icon" src="./img/python.ico" alt="" /> Python
+            </p>
+          </li>
+          <li class="">
+            <p class="item-desc">
+              <img class="skills-icon" src="./img/html5.ico" alt="" /> HTML
+            </p>
+          </li>
+          <li class="">
+            <p class="item-desc">
+              <img class="skills-icon" src="./img/css3.ico" alt="" /> CSS
+            </p>
+          </li>
+          <li class="">
+            <p class="item-desc">
+              <img class="skills-icon" src="./img/github.ico" alt="" /> Git
+            </p>
+          </li>
+          <li class="">
+            <p class="item-desc">
+              <img class="skills-icon" src="./img/java_script.ico" alt="" /> JS
+              (a little)
+            </p>
+          </li>
         </ul>
       </section>
 
@@ -161,7 +194,7 @@
           <span class="line"></span>
         </div>
         <p>
-          The whole experience is linked to 
+          The whole experience is linked to
           <a class="work-link" href="https://github.com/IgorLutoshkin"
             >GitHub</a
           >
