'refactor: add new avatar'

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </div>
 
       <figure class="head-pic">
-        <img class="pic-avatar" src="./img/ava11.jpg" alt="my avatar" />
+        <img class="pic-avatar" src="./img/ava01jpg.jpg" alt="my avatar" />
       </figure>
     </header>
 
