'feat: add link-contact:hover'

--- a/index.html
+++ b/index.html
@@ -100,24 +100,24 @@
           <li class="list-item">
             <p class="item-desc">
               <img class="cont-icon" src="./img/mail.svg" alt="mail." />
-              <a href="https://e.mail.ru/inbox/">ig.yarij@mail.ru</a>
+              <a class="link-contact" href="https://e.mail.ru/inbox/">ig.yarij@mail.ru</a>
             </p>
           </li>
           <li class="list-item">
             <p class="item-desc">
               <img class="cont-icon" src="./img/telegram.svg" alt="telegram" />
-              <a href="">Telegram</a>
+              <a class="link-contact" href="">Telegram</a>
             </p>
           </li>
           <li class="list-item">
             <p class="item-desc">
               <img class="cont-icon" src="./img/vk.svg" alt="vk" />
-              <a href="https://vk.com/id651344516">VK</a>
+              <a class="link-contact" href="https://vk.com/id651344516">VK</a>
             </p>
           </li>
           <li>
             <p class="item-desc">
-              <img class="cont-icon" src="./img/phone.svg" alt="phone" /> <a href="tel:+7 904 225 08 09"> +7 904 225 08 09</a>
+              <img class="cont-icon" src="./img/phone.svg" alt="phone" /> <a class="link-contact" href="tel:+7 904 225 08 09"> +7 904 225 08 09</a>
             </p>
           </li>
         </ul>
