'refactor: add mailto'

--- a/index.html
+++ b/index.html
@@ -100,13 +100,15 @@
           <li class="list-item">
             <p class="item-desc">
               <img class="cont-icon" src="./img/mail.svg" alt="mail." />
-              <a class="link-contact" href="https://e.mail.ru/inbox/">ig.yarij@mail.ru</a>
+              <a class="link-contact" href="mailto:ig.yarij@mail.ru"
+                >Mail.ru</a
+              >
             </p>
           </li>
           <li class="list-item">
             <p class="item-desc">
               <img class="cont-icon" src="./img/telegram.svg" alt="telegram" />
-              <a class="link-contact" href="">Telegram</a>
+              <a class="link-contact" href="#">Telegram</a>
             </p>
           </li>
           <li class="list-item">
@@ -117,7 +119,10 @@
           </li>
           <li>
             <p class="item-desc">
-              <img class="cont-icon" src="./img/phone.svg" alt="phone" /> <a class="link-contact" href="tel:+7 904 225 08 09"> +7 904 225 08 09</a>
+              <img class="cont-icon" src="./img/phone.svg" alt="phone" />
+              <a class="link-contact" href="tel:+7 904 225 08 09">
+                +7 904 225 08 09</a
+              >
             </p>
           </li>
         </ul>
