--- a/index.html
+++ b/index.html
@@ -33,21 +33,20 @@
   </head>
 
   <body>
-    <header class="head">
-      <div class="head-wrap">
-        <h1 class="head-title">
-          Igor
-          <span class="surname">Lutoshkin</span>
-        </h1>
-        <p class="head-desc">HTML CODER</p>
-      </div>
-
+    <div class="content">
       <figure class="head-pic">
         <img class="pic-avatar" src="./img/ava01jpg.jpg" alt="my avatar" />
       </figure>
-    </header>
+      <header class="head">
+        <div class="head-wrap">
+          <h1 class="head-title">
+            Igor
+            <span class="surname">Lutoshkin</span>
+          </h1>
+          <p class="head-desc">HTML CODER</p>
+        </div>
+      </header>
 
-    <div class="content">
       <section class="education">
         <h2 class="education-title">Education</h2>
         <div class="line-wrap">
@@ -100,9 +99,7 @@
           <li class="list-item">
             <p class="item-desc">
               <img class="cont-icon" src="./img/mail.svg" alt="mail." />
-              <a class="link-contact" href="mailto:ig.yarij@mail.ru"
-                >Mail.ru</a
-              >
+              <a class="link-contact" href="mailto:ig.yarij@mail.ru">Mail.ru</a>
             </p>
           </li>
           <li class="list-item">
