--- a/index.html
+++ b/index.html
@@ -171,7 +171,8 @@
         </p>
 
         <pre>
-            <code>function digitize(n) {
+            <code>
+            function digitize(n) {
             let a = (Array.from(String(n), Number)).reverse(); 
             return a; 
             }
