'refactor: del hover link'

--- a/index.html
+++ b/index.html
@@ -77,16 +77,16 @@
           <span class="line"></span>
         </div>
         <p class="about-desc">
-          Hi, here I will tell you a little about myself. I want to be a
-          professional developer, constantly develop and learn new technologies.
-          Now the task is to study the frontend, but in the future I plan to
-          study the backend as well. My strengths are that I am fascinated by
-          the development process itself. I don't have much experience, except
-          that I can add a Python certificate, I'm also currently studying HTML
-          and CSS on my own, I have basic skills working with the Git version
-          control system. Currently, my experience is daily work in self-study
-          of technology. Unfortunately, there is not much time left for studying
-          now, but I try to devote every free minute to programming.
+          Hi, here I will tell you a little about myself. I want to become a
+          professional web developer, constantly develop and master new
+          technologies. My strengths lie in the fact that I am fascinated by the
+          development process itself, I also like to understand complex things,
+          find a solution to the problem on my own, bring the work started to
+          the end and on time. Worked on HTML/CSS layouts for web pages using
+          Figma. I have experience with the layout of adaptive landing pages
+          using HTML and CSS. I have skills working with SVG graphics, simple
+          JavaScript animation, basic knowledge of the Git version control
+          system.
         </p>
       </section>
 
