'feat: add link from telegram'

--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
           <li class="education-list-item">
             <p class="title-list-item">Far Eastern Federal University</p>
             <p class="list-item-desc">
-              Python in examples and tasks (
-              <a class="item-desk__link" href="https://stepik.org/cert/1569801"
-                >certificate </a
-              >)
+              Python in examples and tasks |
+              <a class="item-desk__link" href="https://stepik.org/cert/1569801">
+                my certificate</a
+              >
             </p>
           </li>
         </ul>
@@ -96,16 +96,21 @@
           <span class="line line-left"></span>
         </div>
         <ul class="contacts-list">
-          <li class="list-item">
+          <!--  <li class="list-item">
             <p class="item-desc">
               <img class="cont-icon" src="./img/mail.svg" alt="mail." />
-              <a class="link-contact" href="mailto:ig.yarij@mail.ru">Mail.ru</a>
+              <a class="link-contact" href="mailto:ig.yarij@mail.ru" >Mail.ru</a>
             </p>
-          </li>
+          </li> -->
           <li class="list-item">
             <p class="item-desc">
               <img class="cont-icon" src="./img/telegram.svg" alt="telegram" />
-              <a class="link-contact" href="#">Telegram</a>
+              <a
+                class="link-contact"
+                target="_blank"
+                href="https://t.me/lgorLutoshkin"
+                >Telegram</a
+              >
             </p>
           </li>
           <li class="list-item">
@@ -170,8 +175,7 @@
           this number within an array in reverse order
         </p>
 
-        
-          <pre>
+        <pre>
             <code>
             function digitize(n) {
               let a = (Array.from(String(n), Number)).reverse(); 
@@ -179,7 +183,6 @@
             }
             </code>
         </pre>
-        
 
         <p>
           More examples at the repository
