--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
         <p class="head-desc">HTML CODER</p>
       </div>
       <figure class="head-pic">
-        <img class="pic-avatar" src="./img/ava01jpg.jpg" alt="my avatar" />
+        <picture>
+          <source srcset="./img/ava10.jpg" media="(max-width: 425px)" />
+          <img class="pic-avatar" src="./img/ava01jpg.jpg" alt="my avatar" />
+        </picture>
       </figure>
     </header>
 
