'feat: add link viber'

--- a/index.html
+++ b/index.html
@@ -99,12 +99,14 @@
           <span class="line line-left"></span>
         </div>
         <ul class="contacts-list">
-          <!--  <li class="list-item">
+          <li class="list-item">
             <p class="item-desc">
-              <img class="cont-icon" src="./img/mail.svg" alt="mail." />
-              <a class="link-contact" href="mailto:ig.yarij@mail.ru" >Mail.ru</a>
+              <img class="cont-icon" src="./img/viber.svg" alt="
+              viber" />
+              <a class="link-contact" href="viber://chat?number=%2B79042250809">
+                Viber</a>
             </p>
-          </li> -->
+          </li>
           <li class="list-item">
             <p class="item-desc">
               <img class="cont-icon" src="./img/telegram.svg" alt="telegram" />
